updated some UI things - colors, styling for buttons. found a workaround for annoying ag-grid height collapse issue

--- a/Patients/ClientApp/src/styles.scss
+++ b/Patients/ClientApp/src/styles.scss
@@ -1,17 +1,23 @@
 @import "scss/custom.scss";
 @import '../node_modules/bootstrap/scss/bootstrap';
 
-@import 'ag-grid-community/dist/styles/ag-grid.css';
-@import 'ag-grid-community/dist/styles/ag-theme-alpine.css';
-
-
-
-html, body {
+html, body, .content {
   height: 100%;
   width: 100%;
   padding: 5px;
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
 }
+
+
+/*.ag-root-wrapper-body.ag-layout-normal.ag-focus-managed {
+  height: 100%;
+  width: 100%
+} */
+
+button {
+  margin: 15px;
+}
+
 
 
